infra/gatus/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gatus
spec:
  selector:
    app: gatus
  ports:
    - name: http
      port: 8080
      targetPort: http
